--- a/app/src/main/res/layout/activiti_web.xml
+++ b/app/src/main/res/layout/activiti_web.xml
@@ -11,6 +11,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:elevation="0dp"
+            app:layout_behavior=".behavior.WebViewToolbarLineBehavior"
     >
 
         <androidx.appcompat.widget.Toolbar
@@ -34,7 +35,6 @@
             android:id="@+id/web"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
     />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
